// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkPhoneNumberInput should render correctly 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "rgb(230, 228, 235)",
              "flexDirection": "row",
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              Object {
                "borderColor": "rgb(230, 228, 235)",
                "borderWidth": 1,
              },
              Object {
                "height": 10.666666666666666,
                "width": 16,
              },
              Object {
                "marginEnd": 4,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "marginEnd": 4,
                },
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [],
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(37, 32, 51)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkPhoneNumberInput should render correctly with \`editable\` false 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(230, 228, 235, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
          "disabled",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "rgb(230, 228, 235)",
              "flexDirection": "row",
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              Object {
                "borderColor": "rgb(230, 228, 235)",
                "borderWidth": 1,
              },
              Object {
                "height": 10.666666666666666,
                "width": 16,
              },
              Object {
                "marginEnd": 4,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "marginEnd": 4,
                },
                Object {
                  "color": "rgb(230, 228, 235)",
                },
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "color": "rgb(230, 228, 235)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(37, 32, 51)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
